# market_price_movement_prediction

./: .gitignore  Dockerfile  Dockerfile.test  Prerequisite.json  README.md  about  data_TFRecord_format.py  docker-compose.yml  full_predict_procedure_CNN_RNN.py  load_and_modify_data.py  main.py  movement.py  predict.py  pyproject.toml  requirements.txt  roll_conn.py  scrape_finance_data_yahoo.py  scrape_train_data.py  scrape_training_data.py  scraping_errors.csv  script.py  setup.cfg  tf_log  train.py  train_model_RNN.py  train_script.py
.github/workflows/: main.yml
Prepare_Data_Form/: conn.py  currency_convert.py  modify_investing_data.py
full_predict_procedure_CNN_RNN/: add_roll_conn.py  data_TFRecord_format.py  diff_roll_conn.py  full_predict_procedure_CNN_RNN.py  load_and_modify_data.py  movement.py  predict_RNN.py  predict_movement.py  requirements.txt  roll_conn.py  scrape_finance_data_yahoo.py  test.py  train_model_CNN.py  train_model_CNN_RNN.py  train_model_RNN.py
functions/: f_TFRecord.py  f_coef.py  f_connectedness.py  f_movement.py  f_rolling_connectedness.py  f_scrape_data.py  f_train_model_CNN.py  f_train_model_RNN.py
market_price_movement_prediction/: etl.py  model_trainer.py  predict.py
plot/: events.out.tfevents.1558018433.rucachendeMacBook-Air.local  full_network_plot.py  network_plot.py  specific_network_plot.py  tensorboard_train.py  timeseries_plot.py  volatility.py
src/: api.py  db.py  etl.py  main.py  model_trainer.py  movement.py  predict.py  prediction.py  scheduler.py  scrape_finance_data_yahoo.py  train.py
tests/: test_main.py
(+115 files in other folders)
