[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "market_price_movement_prediction"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Victor Chen <victor.yccchen1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.0"
uvicorn = "0.30.6"
influxdb-client = "1.46.0"
pytest = "8.3.3"
httpx = "0.27.2"
pytest-asyncio = "0.24.0"
python-dotenv = "1.0.1"
apscheduler = "3.10.4"
yfinance = "0.2.44"
flake8 = "7.1.1"
black = "24.8.0"
numpy = ">=1.23.5,<2.0.0"
multi-time-series-connectedness = "0.1.4"
tensorflow = "2.17.0"
